--- a/Bk_Strass/assets/css/style.css
+++ b/Bk_Strass/assets/css/style.css
@@ -88,14 +88,14 @@ li a:hover {
 
 .banner {
     height: auto;
-    background: linear-gradient( rgba(255, 255, 255, 0.767), rgba(255, 255, 255, 0.663)),url('background.jpg');
+    background: linear-gradient( rgba(255, 255, 255, 0.767), rgba(255, 255, 255, 0.663)),url('../images/background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding-top:10px;
+    padding-top: 0px;
 }
 
 section {
@@ -407,6 +407,7 @@ footer p a:hover {
 
 .box {
     padding: 50px;
+    padding-top: 20px;
     width: 0 auto;
     height: 0 auto;
 }
@@ -437,20 +438,21 @@ footer p a:hover {
 }
 
 .flex-outer > li:not(:last-child) {
-  margin-bottom: 20px;
+  margin-bottom: 3px;
 }
 
 .flex-outer li label,
 .flex-outer li p {
   padding: 8px;
   font-weight: 700;
-  letter-spacing: .09em;
+  letter-spacing: .01em;
+  text-align: right;
 }
 
 .flex-outer > li > label,
 .flex-outer li p {
   flex: 1 0 120px;
-  max-width: 220px;
+  max-width: 300px;
 }
 
 .flex-outer > li > label + *,
@@ -462,12 +464,45 @@ footer p a:hover {
   margin: 0;
 }
 
-.flex-outer li input:not([type='checkbox']),
+.flex-outer img {
+    padding-left: 10px;
+  }
+
+.flex-outer div.genero{
+  letter-spacing: .02em;
+  justify-content: 20px;
+  font-weight: 700;
+  padding-left: 350px;
+  align-items: space-between;
+  padding-bottom: 15px;
+}
+
+.flex-outer input[type="radio"],
+.flex-outer input[type="checkbox"] {
+    border: 10px;
+    width: 50px;
+    height: 1.3em;
+}
+
+.flex-outer li input,
 .flex-outer li textarea {
   padding: 15px;
   border-radius: 50px;
   height: 10px;
   border: 1px solid rgb(0, 0, 0);
+}
+
+.flex-outer li legend {
+    font-size: 10px;
+    margin-left: auto;
+}
+
+.flex-outer li h5 {
+    letter-spacing: .02em;
+    font-size: 15px;
+    align-items: space-between;
+    margin-left: auto;
+    padding: 10px;
 }
 
 .flex-outer li button.botao {
@@ -571,4 +606,84 @@ footer p a:hover {
 .color-private {
     font-size: 20px;
     color: #18929D;
+}
+
+/* teste imagens */
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.slider{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+
+figure{
+    position: relative;
+    left: 0;
+    width: 400%; /* width dikali slide */
+    animation: 30s slide infinite;
+}
+
+.slide{
+    position: relative;
+    width: 25%; /* width dibagi slide */
+    float: left;
+}
+.slide img{
+    width: 100%;
+    height: auto; 
+    float: left; 
+    margin-right: -100%; 
+    position: relative;  
+    display: block; 
+    z-index: 1
+}
+
+@keyframes slide{
+    0%{
+        left:0;
+    }
+    10%{
+        left:0;
+    }
+    20%{
+        left:-100%;
+    }
+    30%{
+        left:-100%;
+    }
+    40%{
+        left:-200%;
+    }
+    50%{
+        left:-200%;
+    }
+    55%{
+        left:-300%;
+    }
+    65%{
+        left:-300%;
+    }
+    66%{
+        left:-200%;
+    }
+    74%{
+        left:-200%;
+    }
+    75%{
+        left:-100%;
+    }
+    85%{
+        left:-100%;
+    }
+    90%{
+        left:0;
+    }
+    1000%{
+        left:0;
+    }
 }
